Overflow correction

--- a/style.css
+++ b/style.css
@@ -91,7 +91,6 @@
   body {
     font-family: 'Roboto Regular';
     min-height: 100vh;
-    overflow-y: hidden;
   }
 
   .container {
